src/test/deca/syntax/invalid/homemade/test/test_lex_inv_affect_reserved.deca
// Test en remplacant identifier par un mot resevé
{
    int print = 10;
}